--- a/02. PARTIE REGLEMENTAIRE/Article D1803-35 - 31819877.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-35 - 31819877.md
@@ -1,14 +1,14 @@
 # Article D1803-35
 
 Les dispositions du présent chapitre sont applicables en Nouvelle-Calédonie, en Polynésie française et dans les îles Wallis
-et Futuna.
+et Futuna, dans leur rédaction issue du décret n° 2016-1614 du 25 novembre 2016.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Cite**:
 
-	  - Décret n°2015-1925 du 30 décembre 2015 - art. 2
+	  - Décret n°2016-1614 du 25 novembre 2016 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des transports - art. D1803-18 (T)
+	  - Décret n°2016-1614 du 25 novembre 2016 - art. 3
