--- a/02. PARTIE REGLEMENTAIRE/Article D1803-8 - 28997210.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-8 - 28997210.md
@@ -4,7 +4,16 @@ L'action de formation professionnelle en mobilité doit viser une formation prof
 la nomenclature interministérielle des niveaux de formation, ou, par équivalence, classée de niveau 3 à 5 du cadre européen
 des certifications, effectuée hors de la collectivité d'origine.
 
-Elle doit être sanctionnée à son issue par une qualification ou une certification professionnelle ou un diplôme.
+Par  exception aux dispositions de l'alinéa précédent, l'action de formation  professionnelle en mobilité peut consister en
+la préparation d'un  concours ou examen d'accès aux études préparant à une profession  relevant du code de l'action sociale
+et des familles ou du livre III de la quatrième partie législative du code de la santé publique.  Elle peut également viser
+l'obtention de certifications relevant du  domaine de la santé publique et enregistrées au niveau II de la  nomenclature
+interministérielle des niveaux de formation. Pour  l'application des dispositions du présent alinéa, l'action de formation
+doit être effectuée au sein d'un organisme situé hors de la collectivité  d'origine.
+
+Elle doit être sanctionnée à son issue par une qualification ou une certification professionnelle ou un diplôme, sauf
+lorsqu'elle consiste en la préparation d'un concours ou examen d'accès aux études préparant à une profession relevant du code
+de l'action sociale et des familles ou du livre III de la quatrième partie législative du code de la santé publique.
 
 Elle doit s'inscrire dans la programmation définie chaque année par le représentant de l'Etat dans la collectivité de
 résidence, dans le cadre des directives nationales et après consultation des collectivités territoriales chargées de la
@@ -12,14 +21,10 @@ formation professionnelle.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2010-1424 du 18 novembre 2010 - art. 7 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1614 du 25 novembre 2016 - art. 2
