--- a/02. PARTIE REGLEMENTAIRE/Article D1803-6 - 28997206.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-6 - 28997206.md
@@ -11,12 +11,18 @@ pour les formations de la filière sanitaire, dénommée " allocation complémen
 
 3° L'attribution d'une aide financière versée au début de l'action de formation et destinée à couvrir forfaitairement les
 premiers frais liés à l'installation du stagiaire dans le lieu où se déroule la formation, dénommée " allocation
-d'installation " ; 
+d'installation ". Elle  peut s'accompagner de la prise en charge de nuitées d'hébergement en  cas d'impossibilité
+d'acheminement vers le lieu de formation le jour  même de l'arrivée, de frais de réservation ou de frais de dossier
+susceptibles de faciliter l'accès au logement ; 
 
 4° Le versement d'une aide financière destinée à favoriser l'entrée dans l'emploi lors de l'obtention de la qualification ou
 du diplôme ; 
 
-5° Le versement d'une aide financière au déplacement. 
+5° Le versement d'une aide financière au déplacement. Cette  aide porte sur la totalité du trajet, qui comprend, outre le
+trajet  aérien entre la collectivité de résidence et le territoire où se déroule  la formation, le trajet terrestre entre
+l'aéroport d'arrivée et le lieu  effectif de la formation. Le retour est pris en charge dans les mêmes  conditions. Cette
+aide peut également couvrir les déplacements  terrestres entre le lieu de formation et le lieu où se déroule le stage
+pratique ou l'examen en lien avec la formation.
 
 Les actions de formation professionnelle en mobilité financées dans le cadre de ce dispositif peuvent être complétées ou
 cofinancées par des aides attribuées par les collectivités territoriales, par les organismes qui contribuent à l'insertion,
@@ -30,7 +36,7 @@ par les entreprises ou des groupements d'entreprises.
 
 	**Modifié par**:
 
-	  - Décret n°2015-166 du 13 février 2015 - art. 2
+	  - Décret n°2016-1614 du 25 novembre 2016 - art. 1
 
 	**Cité par**:
 
