--- a/01. PARTIE LEGISLATIVE/Article L5211-2 - 23081230.md
+++ b/01. PARTIE LEGISLATIVE/Article L5211-2 - 23081230.md
@@ -1,14 +1,18 @@
 # Article L5211-2
 
 Dans les eaux territoriales, les sous-marins et autres engins submersibles sont tenus de naviguer en surface et d'arborer
-leur pavillon.
+leur pavillon. 
+
+Le représentant de l'Etat en mer peut toutefois, par dérogation aux dispositions du précédent alinéa, autoriser expressément
+la navigation en-dessous de la surface des eaux de certains engins submersibles, eu égard à l'usage normal de l'engin, et
+après avoir apprécié les conditions de sécurité.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°85-185 du 6 février 1985 - art. 4 (Ab)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2016-1687 du 8 décembre 2016 - art. 64
