--- a/01. PARTIE LEGISLATIVE/Article L5549-1 - 23079298.md
+++ b/01. PARTIE LEGISLATIVE/Article L5549-1 - 23079298.md
@@ -12,6 +12,8 @@ Les normes d'aptitude médicale, selon les fonctions à bord ou les types de nav
 validité du certificat d'aptitude médicale délivré à l'issue du contrôle d'aptitude médicale, sa forme ainsi que les voies et
 délais de recours en cas de refus de délivrance du certificat sont précisés par décret en Conseil d'Etat. 
 
+Les articles L. 5521-1-1 et L. 5521-1-2 sont applicables aux gens de mer autres que marins. 
+
 III. ― Les gens de mer autres que marins doivent, pour l'exercice de leurs fonctions à bord d'un navire, avoir suivi une
 formation minimale dont le contenu est fixé par voie réglementaire.
 
@@ -20,10 +22,6 @@ formation minimale dont le contenu est fixé par voie réglementaire.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 25 (V)
 
 	**Cité par**:
 
@@ -37,6 +35,10 @@ formation minimale dont le contenu est fixé par voie réglementaire.
 	  - Code des transports - art. L5785-1 (V)
 	  - Code des transports - art. L5795-1 (V)
 
+	**Modifié par**:
+
+	  - Ordonnance n°2016-1686 du 8 décembre 2016 - art. 1
+
 	**Cite**:
 
-	  - Code des transports - art. L5521-4 (V)
+	  - Code des transports - art. L5521-4
