--- a/01. PARTIE LEGISLATIVE/Article L5242-2 - 23080987.md
+++ b/01. PARTIE LEGISLATIVE/Article L5242-2 - 23080987.md
@@ -1,7 +1,7 @@
 # Article L5242-2
 
-I. ― Est puni de six mois d'emprisonnement et de 15 000 € d'amende le fait pour une personne embarquée sur un navire de ne
-pas se conformer, dans les eaux intérieures maritimes et jusqu'à la limite extérieure des eaux territoriales françaises : 
+I. ―Est puni d'un an d'emprisonnement et de 150 000 € d'amende le fait pour une personne embarquée sur un navire de ne pas se
+conformer, dans les eaux intérieures maritimes et jusqu'à la limite extérieure des eaux territoriales françaises : 
 
 1° Aux règlements pris par le ministre chargé de la mer et les préfets maritimes relatifs : 
 
@@ -10,14 +10,13 @@ sécurité de la navigation ou le maintien de l'ordre public en mer ;
 
 b) Aux obligations de signalement ou d'information, de veille de fréquences et de réponse aux appels ; 
 
-c) Aux restrictions ou prescriptions particulières de navigation relatives au passage inoffensif, ou au transport de matières
-sensibles ; 
+c) Aux restrictions ou prescriptions particulières de navigation relatives au transport de matières sensibles ; 
 
 d) A la conduite à tenir en cas de découverte d'engins dangereux ; 
 
 2° Aux instructions particulières des préfets maritimes et aux ordres des agents des centres régionaux opérationnels de
 surveillance et de sauvetage et des agents chargés de la police de la navigation, relatives à la sécurité de la navigation
-maritime ou au maintien de l'ordre public en mer. 
+maritime. 
 
 II. ― Est puni des mêmes peines le fait, en dehors des eaux territoriales, pour tout capitaine, chef de quart ou toute
 personne exerçant la responsabilité ou la conduite d'un navire battant pavillon français, de ne pas se conformer aux décrets
@@ -27,15 +26,15 @@ bâtiments de l'Etat et des agents chargés de la police de la navigation, relat
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 33
+	  - Ordonnance n°2016-1687 du 8 décembre 2016 - art. 64
 
 	**Cité par**:
 
 	  - Code des transports - art. L5142-3 (V)
 	  - Code des transports - art. L5142-4 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
