--- a/01. PARTIE LEGISLATIVE/Article L5344-5 - 23080261.md
+++ b/01. PARTIE LEGISLATIVE/Article L5344-5 - 23080261.md
@@ -1,18 +1,9 @@
 # Article L5344-5
 
-Est puni de trois mois d'emprisonnement et de 3 750 € d'amende le fait, pour le pilote : 
-
-1° De méconnaître ses obligations d'assistance à un navire en danger en application de l'article L. 5341-2 ; 
-
-2° De conduire un navire sous l'empire d'un état alcoolique, tel qu'il est caractérisé par le I de l'article L. 234-1 du code
-de la route, même en l'absence de tout signe d'ivresse manifeste.
+Est puni de trois mois d'emprisonnement et de 3 750 € d'amende le fait, pour le pilote, de méconnaître ses obligations
+d'assistance à un navire en danger en application de l'article L. 5341-2.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code de la route. - art. L234-1
-	  - Code des transports - art. L5341-2
 
 	**Codifié par**:
 
@@ -20,4 +11,4 @@ de la route, même en l'absence de tout signe d'ivresse manifeste.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+	  - Ordonnance n°2016-1686 du 8 décembre 2016 - art. 10
