--- a/01. PARTIE LEGISLATIVE/Article L5795-1 - 23078530.md
+++ b/01. PARTIE LEGISLATIVE/Article L5795-1 - 23078530.md
@@ -10,15 +10,15 @@ L. 5546-3, les II et III de l'article L. 5549-1 et les articles L. 5571-1 à L. 
 australes et antarctiques françaises. 
 
 Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1, L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-3, L. 5521-4, L. 5531-1 à L. 5532-1, L. 5533-1 à L. 5533-4, L. 5542-18, L. 5542-19, L. 5542-56, L. 5544-14,
-L. 5545-3-1, L. 5545-10, L. 5546-1-1 à L. 5546-1-5, L. 5546-1-7 à L. 5546-1-9 et L. 5571-1 à L. 5571-4 applicables aux marins
-sont également applicables aux gens de mer autres que marins.
+5513-2, L. 5514-3, L. 5521-1-1 et L. 5521-1-2, L. 5521-4, L. 5531-1 à L. 5532-1, L. 5533-1 à L. 5533-4, L. 5542-18, L.
+5542-19, L. 5542-56, L. 5544-14, L. 5545-3-1, L. 5545-10, L. 5546-1-1 à L. 5546-1-5, L. 5546-1-7 à L. 5546-1-9 et L. 5571-1 à
+L. 5571-4 applicables aux marins sont également applicables aux gens de mer autres que marins.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 47 (V)
+	  - Ordonnance n°2016-1686 du 8 décembre 2016 - art. 8 (V)
 
 	**Cite**:
 
@@ -45,4 +45,3 @@ sont également applicables aux gens de mer autres que marins.
 	  - Code des transports - art. L5546-1-7 (V)
 	  - Code des transports - art. L5546-3 (V)
 	  - Code des transports - art. L5549-1 (V)
-	  - Code des transports - art. L5571-1 (V)
