--- a/01. PARTIE LEGISLATIVE/Article L1264-7 - 31945608.md
+++ b/01. PARTIE LEGISLATIVE/Article L1264-7 - 31945608.md
@@ -10,9 +10,7 @@ de celles applicables aux personnes mentionnées au 1° de cet article, ou à l'
 prévue au même article ; 
 
 3° Le manquement aux obligations de communication d'informations prévues en application des articles L. 2131-7, L. 3111-24,
-L. 3114-11 du présent code et de l'
-article L. 122-31 du code de la voirie routière 
-; 
+L. 3114-11 du présent code et de l'article L. 122-31 du code de la voirie routière ; 
 
 4° Le manquement d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, de la SNCF, d'une entreprise
 ferroviaire ou d'un autre candidat, au sens du livre Ier de la deuxième partie, aux obligations lui incombant au titre de
@@ -26,9 +24,8 @@ destination des entreprises de transport public routier dans ces aménagements, 
 chapitre IV du titre Ier du livre Ier de la troisième partie ou aux obligations prévues par des décisions de l'autorité
 prises en application de la section 3 du même chapitre, à l'exception de l'article L. 3114-11 ; 
 
-7° Le manquement par un concessionnaire d'autoroutes aux obligations de communications d'informations prévues au 
-quatrième alinéa de l'article L. 122-17 du code de la voirie routière
-.
+7° Le manquement aux obligations prévues par des décisions de l'autorité prises en application de l'article L. 122-33 du code
+de la voirie routière.
 
 **Nota:**
 
@@ -38,22 +35,22 @@ Au lieu de " L. 2131-5 " , il convient de lire " L. 2132-5 ".
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2016-1691 du 9 décembre 2016 - art. 41
 
 	**Cite**:
 
-	  - Code de la voirie routière - art. L122-17 (M)
 	  - Code de la voirie routière - art. L122-31
-	  - Code des transports - art. L1264-2 (V)
-	  - Code des transports - art. L2102-1 (V)
-	  - Code des transports - art. L2132-5 (V)
-	  - Code des transports - art. L2132-7 (V)
-	  - Code des transports - art. L2133-3 (V)
-	  - Code des transports - art. L3111-24 (V)
-	  - Code des transports - art. L3114-1 (V)
-	  - Code des transports - art. L3114-11 (V)
+	  - Code de la voirie routière - art. L122-33 (V)
+	  - Code des transports - art. L1264-2
+	  - Code des transports - art. L2102-1
+	  - Code des transports - art. L2132-5
+	  - Code des transports - art. L2132-7
+	  - Code des transports - art. L2133-3
+	  - Code des transports - art. L3111-24
+	  - Code des transports - art. L3114-1
+	  - Code des transports - art. L3114-11
 
 	**Cité par**:
 
