--- a/02. PARTIE REGLEMENTAIRE/Article D4211-1 - 27232536.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D4211-1 - 27232536.md
@@ -1,22 +1,25 @@
 # Article D4211-1
 
-Pour l'application du présent titre et du titre II, les eaux intérieures nationales sont classées en cinq zones, nommées 1,
-2, 3, 4 et R, par arrêté du ministre chargé des transports.
+Pour l'application du présent titre et du titre II, les eaux intérieures nationales et les zones de navigation des bateaux
+entre le premier obstacle à la navigation des navires et la limite transversale de la mer, et à l'aval de cette dernière,
+conformément aux articles L. 4200-1 et L. 4251-1, sont classées en cinq zones, nommées 1,2,3,4 et R, par arrêté du ministre
+chargé des transports.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2007-1168 du 2 août 2007 - art. 3 (Ab)
-
-	**Cité par**:
-
-	  - Arrêté du 30 décembre 2008 - art. 4 (V)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013 (V)
 
-	**Créé par**:
+	**Cité par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Arrêté du 30 décembre 2008 - art. 4 (V)
+
+	**Modifié par**:
+
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
+
+	**Cite**:
+
+	  - Code des transports - art. L4200-1 (V)
+	  - Code des transports - art. L4251-1 (V)
