--- a/02. PARTIE REGLEMENTAIRE/Article D5312-44 - 30030612.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-44 - 30030612.md
@@ -5,20 +5,17 @@ commissaire coordonnateur. Celui-ci assiste aux délibérations du conseil de co
 
 Les décisions du conseil lui sont soumises dans les conditions définies à l'article R. 5312-25.
 
+Un membre du contrôle général économique et financier peut être associé aux travaux du conseil à sa demande.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2009-556 du 19 mai 2009 - art. 6 (Ab)
-	  - Décret n°2009-1009 du 25 août 2009 - art. 6 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cité par**:
 
@@ -28,4 +25,4 @@ Les décisions du conseil lui sont soumises dans les conditions définies à l'a
 
 	**Cite**:
 
-	  - Code des transports - art. R5312-25 (V)
+	  - Code des transports - art. R5312-25
