--- a/02. PARTIE REGLEMENTAIRE/Article D5312-48 - 30030622.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-48 - 30030622.md
@@ -4,30 +4,24 @@ Les représentants des collectivités territoriales et de leurs groupements ment
 
 1° Un représentant désigné par le conseil régional des Pays de la Loire parmi ses membres ; 
 
-2° Un représentant désigné par le conseil régional de Poitou-Charentes parmi ses membres ; 
+2° Un représentant désigné par le conseil régional Nouvelle-Aquitaine ;
 
-3° Un représentant désigné par le conseil régional d'Aquitaine parmi ses membres ; 
+3° Un représentant désigné par la métropole de Nantes parmi ses membres ; 
 
-4° Un représentant désigné par le conseil de la communauté urbaine Nantes métropole parmi ses membres ; 
+4° Un représentant désigné par le conseil de la communauté d'agglomération de La Rochelle parmi ses membres ; 
 
-5° Un représentant désigné par le conseil de la communauté d'agglomération de La Rochelle parmi ses membres ; 
-
-6° Un représentant désigné par le conseil de la communauté urbaine de Bordeaux parmi ses membres.
+5° Un représentant désigné par la métropole de Bordeaux parmi ses membres.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2009-1009 du 25 août 2009 - art. 2, alinéas 2 à 8 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5312-40 (V)
+	  - Code des transports - art. D5312-40
