--- a/02. PARTIE REGLEMENTAIRE/Article D5312-55 - 30030638.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-55 - 30030638.md
@@ -2,30 +2,26 @@
 
 Les représentants des collectivités territoriales et de leurs groupements mentionnés au 1° de l'article D. 5312-40 sont : 
 
-1° Un représentant désigné par le conseil régional de Haute-Normandie parmi ses membres ; 
+1° Un représentant désigné par le conseil régional de Normandie parmi ses membres ; 
 
 2° Un représentant désigné par le conseil régional d'Ile-de-France parmi ses membres ; 
 
 3° Un représentant désigné par le conseil de la communauté d'agglomération du Havre parmi ses membres ; 
 
-4° Un représentant désigné par le conseil de la communauté d'agglomération de Rouen parmi ses membres ; 
+4° Un représentant désigné par la métropole  de Rouen parmi ses membres ; 
 
 5° Un représentant désigné par le conseil de Paris siégeant en formation de conseil municipal parmi ses membres.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2009-556 du 19 mai 2009 - art. 2, alinéas 2 à 7 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5312-40 (V)
+	  - Code des transports - art. D5312-40
