--- a/02. PARTIE REGLEMENTAIRE/Article D5341-77 - 30031776.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5341-77 - 30031776.md
@@ -6,30 +6,25 @@ L. 5341-1 :
 1° Les bateaux et engins flottants fluviaux dont la longueur, la largeur et le tirant d'eau maximal sont inférieurs à des
 limites fixées, pour la zone considérée, par l'arrêté préfectoral prévu par l'article D. 5341-75 ; 
 
-2° Les bateaux et engins flottants fluviaux, définis par le même arrêté, lorsque leur conduite est assurée par un conducteur
-titulaire d'une licence de patron-pilote en état de validité ou assisté d'une personne possédant une telle licence ; 
+2° (Supprimé)
 
 3° Les bateaux et engins flottants fluviaux affectés exclusivement à l'amélioration, à l'entretien ou à la surveillance des
 ports ou de leurs accès, quelles que soient leurs caractéristiques géométriques.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2009-1360 du 5 novembre 2009 - art. 3 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5341-75 (V)
-	  - Code des transports - art. L5341-1 (V)
+	  - Code des transports - art. D5341-75
+	  - Code des transports - art. L5341-1
 
 	**Cité par**:
 
