--- a/02. PARTIE REGLEMENTAIRE/Article D5341-79 - 30031780.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5341-79 - 30031780.md
@@ -3,9 +3,10 @@
 Le jury mentionné à l'article D. 5341-78 se réunit sous la présidence du préfet de département du siège de la station de
 pilotage du port desservi ou de son représentant et comprend les membres suivants : 
 
-1° Le directeur territorial de Voies navigables de France intéressé ou son représentant ; 
+1° L'autorité compétente mentionnée au R. * 4100-1 ou son représentant ; 
 
-2° Le directeur départemental des territoires et de la mer ou son représentant ; 
+2° Le cas échéant, lorsqu'il diffère de l'autorité mentionnée au 1°, le directeur départemental des territoires et de la mer
+du siège de la station de pilotage du port desservi, territorialement compétent ; 
 
 3° Le représentant de l'autorité investie du pouvoir de police portuaire ; 
 
@@ -13,22 +14,20 @@ pilotage du port desservi ou de son représentant et comprend les membres suivan
 du syndicat des pilotes et avis du directeur départemental des territoires et de la mer ; 
 
 5° Au moins un conducteur possédant une licence de patron-pilote d'un niveau au moins égal à celle sollicitée par les
-candidats, sur proposition du directeur territorial de Voies navigables de France intéressé.
+candidats, sur proposition du directeur départemental des territoires et de la mer du siège de la station de pilotage du port
+desservi, territorialement compétent.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2009-1360 du 5 novembre 2009 - art. 5, alinéas 3 à 8 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5341-78 (V)
+	  - Code des transports - art. D5341-78
+	  - Code des transports - art. R*4100-1 (V)
