--- a/02. PARTIE REGLEMENTAIRE/Article D5312-49 - 30030624.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-49 - 30030624.md
@@ -4,24 +4,18 @@ Les représentants de l'Etat mentionnés au 2° de l'article D. 5312-40 sont :
 
 1° Le préfet de la région Pays de la Loire, préfet de la Loire-Atlantique, ou son représentant ; 
 
-2° Le préfet de la région Poitou-Charentes, préfet de la Vienne, ou son représentant ; 
-
-3° Le préfet de la région Aquitaine, préfet de la Gironde, ou son représentant.
+2° Le préfet de la région Nouvelle-Aquitaine, préfet de Gironde, ou son représentant.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2009-1009 du 25 août 2009 - art. 2, alinéas 9 à 12 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5312-40 (V)
+	  - Code des transports - art. D5312-40
