--- a/02. PARTIE REGLEMENTAIRE/Article D5312-56 - 30030640.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-56 - 30030640.md
@@ -4,22 +4,18 @@ Les représentants de l'Etat mentionnés au 2° de l'article D. 5312-40 sont :
 
 1° Le préfet de la région Ile-de-France, préfet de Paris, ou son représentant ; 
 
-2° Le préfet de la région Haute-Normandie, préfet de la Seine-Maritime, ou son représentant.
+2° Le préfet de la région Normandie, préfet de la Seine-Maritime, ou son représentant.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2009-556 du 19 mai 2009 - art. 2, alinéas 8 à 10 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5312-40 (V)
+	  - Code des transports - art. D5312-40
