--- a/02. PARTIE REGLEMENTAIRE/Article D5312-58 - 30030644.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-58 - 30030644.md
@@ -2,24 +2,20 @@
 
 Les représentants des établissements mentionnés au 4° de l'article D. 5312-40 sont : 
 
-1° Le président de l'établissement public Réseau ferré de France ou son représentant qu'il désigne à titre permanent ; 
+1° Le président de l'établissement public SNCF Réseau  ou son représentant qu'il désigne à titre permanent ; 
 
 2° Le directeur général de l'établissement public Voies navigables de France.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2009-556 du 19 mai 2009 - art. 2, alinéas 14 à 16 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5312-40 (V)
+	  - Code des transports - art. D5312-40
