--- a/02. PARTIE REGLEMENTAIRE/Article D5312-59 - 30030646.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5312-59 - 30030646.md
@@ -12,23 +12,25 @@ conseil ;
 l'article R. 4322-9 ; 
 
 4° Une personnalité qualifiée nommée par le ministre chargé des ports maritimes en raison de ses compétences dans les
-activités intéressant les ports, les transports, l'aménagement ou l'économie. Cette personnalité préside le conseil.
+activités intéressant les ports, les transports, l'aménagement ou l'économie. Cette personnalité préside le conseil ;
+
+5° Une personnalité qualifiée nommée par la chambre régionale de commerce et d'industrie de Normandie ;  
+
+6° Une personnalité qualifiée nommée par la chambre régionale de commerce et d'industrie d'Ile-de-France ; 
+
+7° Une personnalité qualifiée nommée par la fédération des communautés portuaires de l'axe Seine.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2009-556 du 19 mai 2009 - art. 2, alinéas 17 à 21 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2016-1727 du 14 décembre 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D5312-40 (V)
-	  - Code des transports - art. R4322-9 (V)
+	  - Code des transports - art. D5312-40
+	  - Code des transports - art. R4322-9
