--- a/01. PARTIE LEGISLATIVE/Article L5231-2 - 23081178.md
+++ b/01. PARTIE LEGISLATIVE/Article L5231-2 - 23081178.md
@@ -2,20 +2,23 @@
 
 Les titres de navigation maritime mentionnés à l'article L. 5231-1 sont : 
 
-1° Le rôle d'équipage ; 
+1° Le permis d'armement ;
 
-2° Le permis de circulation ; 
-
-3° La carte de circulation. 
+2° La carte de circulation.
 
 Les conditions d'application des dispositions du présent titre, notamment les conditions de délivrance et de retrait des
 titres de navigation maritime ainsi que leur durée de validité, sont fixées pour chaque catégorie par voie réglementaire.
 
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°42-427 du 1 avril 1942 - art. 3 (VT), alinéas 1 à 4
+	  - Loi n°2016-816 du 20 juin 2016 - art. 15
 
 	**Cité par**:
 
