--- a/01. PARTIE LEGISLATIVE/Article L5232-1 - 23081174.md
+++ b/01. PARTIE LEGISLATIVE/Article L5232-1 - 23081174.md
@@ -1,10 +1,16 @@
 # Article L5232-1
 
-Tout navire ou autre engin flottant dont l'équipage est constitué de marins au sens du 3° de l'article L. 5511-1 doit être
-titulaire d'un rôle d'équipage délivré par l'autorité administrative. 
+Tout navire ou autre engin flottant dont l'équipage comprend au moins un marin au sens du 3° de l'article L. 5511-1 doit être
+titulaire d'un permis d'armement délivré par l'autorité administrative. 
 
-Le rôle d'équipage est l'acte authentique de constitution de l'armement administratif du navire. Son contenu est fixé par
-voie réglementaire.
+Le permis d'armement est l'acte authentique de constitution de l'armement administratif du navire. Il atteste de la
+conformité de l'armement du navire en matière de composition de l'équipage et de conditions d'emploi aux livres V et VI et au
+chapitre V des titres Ier à IX du livre VII de la présente cinquième partie. Son contenu est fixé par voie réglementaire.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
@@ -14,7 +20,7 @@ voie réglementaire.
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 22
+	  - Loi n°2016-816 du 20 juin 2016 - art. 15
 
 	**Cité par**:
 
