--- a/01. PARTIE LEGISLATIVE/Article L5234-1 - 23081138.md
+++ b/01. PARTIE LEGISLATIVE/Article L5234-1 - 23081138.md
@@ -1,18 +1,22 @@
 # Article L5234-1
 
-Les navires de plaisance n'ayant à bord aucun personnel professionnel maritime salarié au sens des 3° et 4° de l'article L.
-5511-1 ainsi que les engins de sport nautique dont la liste est fixée par voie réglementaire sont munis d'une carte de
-circulation.
+Les navires n'ayant à bord aucun personnel professionnel maritime salarié au sens du 3° de l'article L. 5511-1 ainsi que les
+engins de sport nautique dont la liste est fixée par voie réglementaire sont munis d'une carte de circulation.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°42-427 du 1 avril 1942 - art. 7 (VT)
+	  - Loi n°2016-816 du 20 juin 2016 - art. 15
 
 	**Cite**:
 
-	  - Code des transports - art. L5511-1 (V)
+	  - Code des transports - art. L5511-1
 
 	**Codifié par**:
 
