--- a/01. PARTIE LEGISLATIVE/Article L5511-4 - 23079935.md
+++ b/01. PARTIE LEGISLATIVE/Article L5511-4 - 23079935.md
@@ -5,10 +5,15 @@ Pour l'application du présent livre :
 1° Le terme " capitaine " désigne le capitaine, le patron ou toute autre personne qui exerce de fait le commandement du
 navire ; 
 
-2° Le terme " officier " désigne toutes les personnes portées comme officiers ou élèves officiers sur le rôle d'équipage ; 
+2° Le terme " officier " désigne toutes les personnes portées comme officiers ou élèves officiers sur la liste d'équipage ; 
 
 3° Le terme " maître " désigne les maîtres d'équipage ainsi que toutes personnes portées comme maîtres ou chefs de service
-sur le rôle d'équipage.
+sur la liste d'équipage.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
@@ -17,9 +22,9 @@ sur le rôle d'équipage.
 	  - Loi du 17 décembre 1926 - art. 1 (VD)
 	  - Code des transports - art. L5542-15 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code disciplinaire et pénal de la marine marcha... - art. 2 (M), alinéas 1 à 5
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Codifié par**:
 
