--- a/01. PARTIE LEGISLATIVE/Article L5552-16 - 23079230.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-16 - 23079230.md
@@ -11,8 +11,8 @@ pour regagner ce territoire ;
 3° Les périodes pendant lesquelles le marin a dû interrompre la navigation pour cause de congé ou repos, de maladie,
 d'accident, de naufrage, d'innavigabilité du navire ou en raison de circonstances résultant de l'état de guerre ; 
 
-4° Les périodes antérieures à l'ouverture du rôle d'équipage ou postérieures à la clôture de ce rôle durant lesquelles les
-marins d'un navire sont affectés à des tâches de nature technique à bord de ce navire ; 
+4° Les périodes antérieures à l'ouverture de l'état des services ou postérieures à la clôture de cet état des services durant
+lesquelles les marins d'un navire sont affectés à des tâches de nature technique à bord de ce navire ; 
 
 5° Le temps pendant lequel les marins ayant accompli au moins dix ans de navigation sont employés d'une façon permanente dans
 les services techniques des entreprises d'armement maritime ou des sociétés de classification agréées ; 
@@ -80,14 +80,14 @@ Un décret en Conseil d'Etat fixe les modalités d'application du présent artic
 
 **Nota:**
 
-Conformément à l'article 48 II de la loi n° 2015-1702 du 21 décembre 2015, les présentes dispositions s'appliquent au titre
-des pensions liquidées à compter du 1er janvier 2016.
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 77
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cité par**:
 
@@ -109,4 +109,8 @@ des pensions liquidées à compter du 1er janvier 2016.
 	  - Code rural - art. L912-6 (V)
 	  - Code du travail - art. L5123-2
 	  - Code de la sécurité sociale. - art. L161-21
-	  - Code de la sécurité sociale. - art. L351-3 (V)
+	  - Code de la sécurité sociale. - art. L351-3
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
