--- a/01. PARTIE LEGISLATIVE/Article L5552-18 - 23079226.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-18 - 23079226.md
@@ -1,14 +1,18 @@
 # Article L5552-18
 
-Dans un délai maximum à compter de la clôture du rôle d'équipage, les services qui n'ont pas été actifs ou professionnels
+Dans un délai maximum à compter de la clôture de l'état des services, les services qui n'ont pas été actifs ou professionnels
 peuvent être réduits ou annulés. Un décret en Conseil d'Etat fixe ce délai et les modalités d'application de cette
 disposition.
 
+**Nota:**
+
+
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L13 (Ab), alinéa 1
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cité par**:
 
