--- a/01. PARTIE LEGISLATIVE/Article L5755-4 - 23078669.md
+++ b/01. PARTIE LEGISLATIVE/Article L5755-4 - 23078669.md
@@ -5,9 +5,18 @@ marins embarqués sur un navire immatriculé et armé à Saint-Pierre-et-Miquelo
 navire est affecté à certaines activités de pêche dans des conditions définies par voie réglementaire. 
 
 La réduction est de droit pour le marin qui en fait la demande lors de son embarquement sur un des navires mentionnés au
-premier alinéa ; elle est maintenue tant que le marin est inscrit au rôle d'équipage du navire.
+premier alinéa ; elle est maintenue tant que le marin est inscrit à l'état des services du navire.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cité par**:
 
@@ -15,7 +24,7 @@ premier alinéa ; elle est maintenue tant que le marin est inscrit au rôle d'é
 
 	**Cite**:
 
-	  - Code des transports - art. L5553-1 (V)
+	  - Code des transports - art. L5553-1
 
 	**Codifié par**:
 
