--- a/01. PARTIE LEGISLATIVE/Article L5762-1 - 23078642.md
+++ b/01. PARTIE LEGISLATIVE/Article L5762-1 - 23078642.md
@@ -1,15 +1,24 @@
 # Article L5762-1
 
-Les dispositions du livre II, à l'exception de celles de la sous-section 3 de la section 1 et de la section 3 du chapitre II
-du titre IV sont applicables en Nouvelle-Calédonie sous réserve des compétences dévolues à la collectivité en matière de
-police et sécurité de la circulation maritime et de sauvegarde de la vie humaine en mer par la loi organique n° 99-209 du 19
-mars 1999.
+Les dispositions du livre II, à l'exception de celles des chapitres Ier à IV du titre III et de la sous-section 3 de la
+section 1 et de la section 3 du chapitre II du titre IV sont applicables en Nouvelle-Calédonie sous réserve des compétences
+dévolues à la collectivité en matière de police et sécurité de la circulation maritime et de sauvegarde de la vie humaine en
+mer par la loi organique n° 99-209 du 19 mars 1999.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi n°99-209 du 19 mars 1999 (V)
+	  - Loi n°99-209 du 19 mars 1999
+
+	**Modifié par**:
+
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cité par**:
 
