--- a/01. PARTIE LEGISLATIVE/Article L5785-3 - 23078564.md
+++ b/01. PARTIE LEGISLATIVE/Article L5785-3 - 23078564.md
@@ -2,22 +2,18 @@
 
 Pour l'application à Wallis-et-Futuna de l'article L. 5542-18 : 
 
-1° A la fin du premier alinéa, les mots : " inscription au rôle d'équipage " sont remplacés par le mot : " embarquement " ; 
+1° A la fin du premier alinéa, les mots : " inscription à l'état des services " sont remplacés par le mot : " embarquement
+" ; 
 
-2° A la fin du cinquième alinéa, les mots : " mentionné au III de l'article L. 5542-3" sont remplacés par les mots : " à la
+2° A la fin du cinquième alinéa, les mots : " mentionné au III de l'article L. 5542-3 " sont remplacés par les mots : " à la
 part ".
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 36
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cite**:
 
 	  - Code des transports - art. L5542-18
-	  - Code des transports - art. L5542-3
