--- a/01. PARTIE LEGISLATIVE/Article L5232-2 - 23081169.md
+++ b/01. PARTIE LEGISLATIVE/Article L5232-2 - 23081169.md
@@ -1,10 +1,15 @@
 # Article L5232-2
 
 Sans préjudice des dispositions du titre II du livre II de la quatrième partie et de celles de l'article L. 5241-2, les
-bateaux et engins fluviaux dont l'équipage est constitué de marins au sens du 3° de l'article L. 5511-1 doivent également
-être titulaires d'un rôle d'équipage lorsqu'ils naviguent exclusivement en aval de la limite de la navigation maritime. 
+bateaux et engins fluviaux dont l'équipage comprend au moins un marin au sens du 3° de l'article L. 5511-1 doivent également
+être titulaires d'un permis d'armement lorsqu'ils naviguent exclusivement en aval de la limite de la navigation maritime. 
 
 Ces bateaux et engins sont assimilés à des navires pour l'application du livre V de la présente partie.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
@@ -14,7 +19,7 @@ Ces bateaux et engins sont assimilés à des navires pour l'application du livre
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 22
+	  - Loi n°2016-816 du 20 juin 2016 - art. 15
 
 	**Cite**:
 
