--- a/01. PARTIE LEGISLATIVE/Article L5232-4 - 23081150.md
+++ b/01. PARTIE LEGISLATIVE/Article L5232-4 - 23081150.md
@@ -1,13 +1,18 @@
 # Article L5232-4
 
-Les différents genres de navigation ainsi que les catégories de rôle d'équipage correspondantes sont définis par voie
-réglementaire.
+Le contenu du permis d'armement, les différents genres de navigation ainsi que les catégories de permis d'armement
+correspondantes sont définis par voie réglementaire.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°42-427 du 1 avril 1942 - art. 5 (M), alinéa 10
+	  - Loi n°2016-816 du 20 juin 2016 - art. 15
 
 	**Cité par**:
 
