--- a/01. PARTIE LEGISLATIVE/Article L5511-3 - 23079937.md
+++ b/01. PARTIE LEGISLATIVE/Article L5511-3 - 23079937.md
@@ -3,7 +3,12 @@
 L'équipage comprend le capitaine et les marins définis au 3° de l'article L. 5511-1. 
 
 Pour l'application du présent livre, les membres de l'équipage sont considérés comme embarqués pendant toute la durée de leur
-inscription sur le rôle d'équipage.
+inscription sur la liste d'équipage.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
@@ -12,13 +17,13 @@ inscription sur le rôle d'équipage.
 	  - Loi du 17 décembre 1926 - art. 1 (VD)
 	  - Décret n°2015-723 du 24 juin 2015 - art. 1 (VD)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°42-427 du 1 avril 1942 - art. 4 (Ab), ecqc le lien équipage/rôle d'équipage
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L5511-1 (V)
+	  - Code des transports - art. L5511-1
 
 	**Codifié par**:
 
