--- a/01. PARTIE LEGISLATIVE/Article L5532-1 - 23079828.md
+++ b/01. PARTIE LEGISLATIVE/Article L5532-1 - 23079828.md
@@ -1,14 +1,23 @@
 # Article L5532-1
 
-Par dérogation au chapitre Ier, les personnels militaires embarqués, à quelque titre que ce soit, sur un navire muni d'un
-rôle d'équipage demeurent justiciables des tribunaux dont ils relèvent en application du code de procédure pénale et du code
+Par dérogation au chapitre Ier, les personnels militaires embarqués, à quelque titre que ce soit, sur un navire muni d'une
+liste d'équipage demeurent justiciables des tribunaux dont ils relèvent en application du code de procédure pénale et du code
 de justice militaire.
 
 Les conditions de la répression des fautes de discipline et la procédure à suivre pour la recherche et la constatation des
 infractions commises à bord par des personnels militaires sont fixées par un décret contresigné par le ministre chargé des
 gens de mer, le ministre chargé de la défense et le ministre chargé de l'outre-mer.
 
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
+
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Codifié par**:
 
