--- a/01. PARTIE LEGISLATIVE/Article L5542-18 - 23079763.md
+++ b/01. PARTIE LEGISLATIVE/Article L5542-18 - 23079763.md
@@ -1,13 +1,13 @@
 # Article L5542-18
 
-Tout marin a droit gratuitement à la nourriture ou à une indemnité pendant toute la durée de son inscription au rôle
-d'équipage. 
+Tout marin a droit gratuitement à la nourriture ou à une indemnité pendant toute la durée de son inscription à l'état des
+services. 
 
 Le montant de cette indemnité et les modalités de son versement sont déterminés par voie d'accord collectif de branche. 
 
 Par dérogation au premier alinéa, à la pêche maritime, un accord collectif de branche peut prévoir une période ouvrant droit
 à indemnité inférieure à la durée d'inscription à l'état des services. Cette période ne peut être inférieure à la durée de
-l'embarquement effectif.  
+l'embarquement effectif. 
 
 A défaut d'accord collectif applicable à un type de navires, un décret précise le montant de l'indemnité. 
 
@@ -20,13 +20,9 @@ entreprises de cultures marines, sauf lorsque cette application est prévue par 
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 36
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cite**:
 
@@ -37,7 +33,7 @@ entreprises de cultures marines, sauf lorsque cette application est prévue par 
 
 	  - Code des transports - art. L5542-56 (V)
 	  - Code des transports - art. L5549-5 (VD)
-	  - Code des transports - art. L5725-1 (V)
+	  - Code des transports - art. L5725-1 (M)
 	  - Code des transports - art. L5725-4 (V)
 	  - Code des transports - art. L5785-1 (V)
 	  - Code des transports - art. L5785-3 (VD)
