--- a/01. PARTIE LEGISLATIVE/Article L5542-5 - 23079801.md
+++ b/01. PARTIE LEGISLATIVE/Article L5542-5 - 23079801.md
@@ -5,10 +5,15 @@ de le signer.
 
 Il signe le contrat et en reçoit un exemplaire avant l'embarquement. 
 
-II.-L'employeur en adresse simultanément une copie à l'autorité administrative compétente. 
+II.-(abrogé)
 
-III.-La transmission prévue au II du présent article dispense des formalités prévues aux articles L. 1221-10 à L. 1221-12 du
-code du travail.
+III.-L'inscription sur la liste d'équipage d'une personne appartenant à la catégorie des gens de mer dispense des formalités
+prévues aux articles L. 1221-10 à L. 1221-12 du code du travail.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
@@ -18,11 +23,11 @@ code du travail.
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 25 (V)
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L1221-10 (V)
+	  - Code du travail - art. L1221-10
 
 	**Cité par**:
 
