--- a/01. PARTIE LEGISLATIVE/Article L5549-5 - 27720706.md
+++ b/01. PARTIE LEGISLATIVE/Article L5549-5 - 27720706.md
@@ -1,14 +1,19 @@
 # Article L5549-5
 
-Pour l'application aux gens de mer autres que marins de l'article L. 5542-18, au premier alinéa, les mots : " au rôle " sont
-remplacés par les mots : " sur la liste ".
+Pour l'application aux gens de mer autres que marins de l'article L. 5542-18, au premier alinéa, les mots : " à l'état des
+services " sont remplacés par les mots : " sur la liste d'équipage ".
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 25 (V)
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L5542-18 (V)
+	  - Code des transports - art. L5542-18
