--- a/01. PARTIE LEGISLATIVE/Article L5772-1 - 23078611.md
+++ b/01. PARTIE LEGISLATIVE/Article L5772-1 - 23078611.md
@@ -1,15 +1,25 @@
 # Article L5772-1
 
-Les dispositions du livre II à l'exception de celles de la sous-section 3 de la section 1, de la section 3 du chapitre II du
-titre IV et du titre VII, sont applicables en Polynésie française sous réserve des compétences dévolues à cette collectivité
-par la loi organique n° 2004-192 du 27 février 2004 dans les eaux intérieures et en matière de sécurité des navires de moins
-de 160 tonneaux de jauge brute qui ne sont pas destinés au transport des passagers.
+Les dispositions du livre II à l'exception de celles des chapitres Ier à IV du titre III et de la sous-section 3 de la
+section 1, de la section 3 du chapitre II du titre IV et du titre VII, sont applicables en Polynésie française sous réserve
+des compétences dévolues à cette collectivité par la loi organique n° 2004-192 du 27 février 2004 dans les eaux intérieures
+et en matière de sécurité des navires de moins de 160 tonneaux de jauge brute qui ne sont pas destinés au transport des
+passagers.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi n°2004-192 du 27 février 2004 (V)
+	  - Loi organique n°2004-192 du 27 février 2004
+
+	**Modifié par**:
+
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
 
 	**Codifié par**:
 
