--- a/01. PARTIE LEGISLATIVE/Article L5795-1 - 23078530.md
+++ b/01. PARTIE LEGISLATIVE/Article L5795-1 - 23078530.md
@@ -1,47 +1,58 @@
 # Article L5795-1
 
-Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1,L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-3, L. 5521-1 à L. 5521-5, L. 5522-1 à L. 5522-4 à l'exception du II de l'article L. 5522-3, L. 5523-1 à L.
-5523-6, L. 5524-1 à L. 5524-4, L. 5531-1 à L. 5532-1, 
+Les articles L. 5511-1 à L. 5511-5,  à l'exception du b du 3° de l'article L. 5511-1, 
+L. 5512-1 à L. 5512-4, L. 5513-1, L. 5513-2, L. 5514-3, L. 5521-1 à L. 5521-5, L. 5522-1 à L. 5522-4 à l'exception du II de
+l'article L. 5522-3, L. 5523-1 à L. 5523-6, L. 5524-1 à L. 5524-4, L. 5531-1 à L. 5532-1, 
 L. 5533-1 à L. 5533-4, L. 5542-18, L. 5542-19, L. 5542-21-1, L. 5542-56, L. 5544-14, L. 5545-3-1, L. 5545-9-1, L. 5545-10, L.
 5545-13, L. 5546-1-1 à L. 5546-1-5, 
 L. 5546-1-7 à L. 5546-1-9, 
-L. 5546-3, les II et III de l'article L. 5549-1 et les articles L. 5571-1 à L. 5571-4 sont applicables dans les Terres
-australes et antarctiques françaises. 
+L. 5546-3, les II et III de l'article L. 5549-1 , l'article L. 5551-3  et les articles L. 5571-1 à L. 5571-4 sont applicables
+dans les Terres australes et antarctiques françaises. 
 
 Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1, L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-3, L. 5521-1-1 et L. 5521-1-2, L. 5521-4, L. 5531-1 à L. 5532-1, L. 5533-1 à L. 5533-4, L. 5542-18, L.
-5542-19, L. 5542-56, L. 5544-14, L. 5545-3-1, L. 5545-10, L. 5546-1-1 à L. 5546-1-5, L. 5546-1-7 à L. 5546-1-9 et L. 5571-1 à
-L. 5571-4 applicables aux marins sont également applicables aux gens de mer autres que marins.
+5513-2, L. 5514-3, L. 5521-4, L. 5531-1 à L. 5532-1, L. 5533-1 à L. 5533-4, L. 5542-18, L. 5542-19, L. 5542-56, L. 5544-14,
+L. 5545-3-1, L. 5545-10, L. 5546-1-1 à L. 5546-1-5, L. 5546-1-7 à L. 5546-1-9 et L. 5571-1 à L. 5571-4 applicables aux marins
+sont également applicables aux gens de mer autres que marins.
+
+**Nota:**
+
+Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
+fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
 	**Modifié par**:
 
-	  - Ordonnance n°2016-1686 du 8 décembre 2016 - art. 8 (V)
+	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
+	  - Loi n°2016-816 du 20 juin 2016 - art. 47
 
 	**Cite**:
 
 	  - Code des transports - art. L5511-1 (V)
-	  - Code des transports - art. L5512-1 (V)
-	  - Code des transports - art. L5513-1 (V)
-	  - Code des transports - art. L5514-3 (V)
+	  - Code des transports - art. L5512-1
+	  - Code des transports - art. L5513-1
+	  - Code des transports - art. L5514-3
 	  - Code des transports - art. L5521-1 (V)
-	  - Code des transports - art. L5522-1 (V)
+	  - Code des transports - art. L5522-1
 	  - Code des transports - art. L5522-3 (V)
-	  - Code des transports - art. L5523-1 (V)
+	  - Code des transports - art. L5523-1
 	  - Code des transports - art. L5524-1 (V)
-	  - Code des transports - art. L5531-1 (V)
-	  - Code des transports - art. L5533-1 (V)
-	  - Code des transports - art. L5542-18 (V)
-	  - Code des transports - art. L5542-21-1 (V)
-	  - Code des transports - art. L5542-56 (V)
-	  - Code des transports - art. L5544-14 (V)
-	  - Code des transports - art. L5545-10 (V)
-	  - Code des transports - art. L5545-13 (V)
-	  - Code des transports - art. L5545-3-1 (V)
-	  - Code des transports - art. L5545-9-1 (V)
-	  - Code des transports - art. L5546-1-1 (V)
-	  - Code des transports - art. L5546-1-7 (V)
-	  - Code des transports - art. L5546-3 (V)
-	  - Code des transports - art. L5549-1 (V)
+	  - Code des transports - art. L5531-1
+	  - Code des transports - art. L5533-1
+	  - Code des transports - art. L5542-18
+	  - Code des transports - art. L5542-21-1
+	  - Code des transports - art. L5542-56
+	  - Code des transports - art. L5544-14
+	  - Code des transports - art. L5545-10
+	  - Code des transports - art. L5545-13
+	  - Code des transports - art. L5545-3-1
+	  - Code des transports - art. L5545-9-1
+	  - Code des transports - art. L5546-1-1
+	  - Code des transports - art. L5546-1-7
+	  - Code des transports - art. L5546-3
+	  - Code des transports - art. L5549-1
+	  - Code des transports - art. L5571-1
