--- a/02. PARTIE REGLEMENTAIRE/Article D1803-35 - 31819877.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-35 - 31819877.md
@@ -1,14 +1,14 @@
 # Article D1803-35
 
 Les dispositions du présent chapitre sont applicables en Nouvelle-Calédonie, en Polynésie française et dans les îles Wallis
-et Futuna, dans leur rédaction issue du décret n° 2016-1614 du 25 novembre 2016.
+et Futuna,              dans leur rédaction issue du décret n° 2016-1791 du 19 décembre 2016.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°2016-1614 du 25 novembre 2016 (V)
+	  - Décret n°2016-1791 du 19 décembre 2016
 
 	**Modifié par**:
 
-	  - Décret n°2016-1614 du 25 novembre 2016 - art. 3
+	  - Décret n°2016-1791 du 19 décembre 2016 - art. 4
