--- a/02. PARTIE REGLEMENTAIRE/Article D1803-12 - 28997220.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-12 - 28997220.md
@@ -1,31 +1,38 @@
 # Article D1803-12
 
-I.-Au cours d'une année civile, il ne peut être accordé qu'une aide au titre du fonds de continuité territoriale, toutes
+I. — Au cours d'une année civile, il ne peut être accordé qu'une aide au titre du fonds de continuité territoriale, toutes
 aides confondues. 
 
-Par dérogation au premier alinéa :
+Par dérogation au premier alinéa : 
 
-- l'aide à la continuité territoriale pour un déplacement intérieur à une collectivité prévue au deuxième alinéa de l'article
+— l'aide à la continuité territoriale pour un déplacement intérieur à une collectivité prévue au deuxième alinéa de l'article
 L. 1803-4 peut être cumulée, au cours d'une même année civile, avec une autre forme d'aide à la continuité territoriale, avec
-le passeport pour la mobilité des études ou avec le passeport pour la mobilité de la formation professionnelle ;
+le passeport pour la mobilité des études ou avec le passeport pour la mobilité de la formation professionnelle ; 
 
-- la personne bénéficiant d'un passeport pour la mobilité de la formation professionnelle dans les conditions de l'article D.
+— la personne bénéficiant d'un passeport pour la mobilité de la formation professionnelle dans les conditions de l'article D.
 1803-11 peut, sous réserve que le concours donne accès à une formation dispensée par un établissement d'enseignement
 supérieur, reconnue par les autorités compétentes d'un l'Etat membre de l'Union européenne et non rémunérée, obtenir au cours
-de la même année civile un passeport pour la mobilité des études si elle répond aux conditions d'éligibilité de ce dernier. 
+de la même année civile un passeport pour la mobilité des études si elle répond aux conditions d'éligibilité de ce dernier ; 
 
-II.-L'aide à la continuité territoriale prévue au premier alinéa de l'article L. 1803-4 ne peut être versée au cours des
-trois années suivant l'année de délivrance de la dernière aide. 
+— lorsque la demande d'aide à la continuité territoriale vers la France métropolitaine est justifiée par un déplacement pour
+se rendre aux obsèques d'un parent au premier degré, au sens de l'article 743 du code civil, ou du conjoint marié ou lié par
+un pacte civil de solidarité, l'aide peut être cumulée, au cours d'une même année civile, avec une autre aide du fonds de
+continuité territoriale. 
 
-III.-Par dérogation au I et au II du présent article, le père ou la mère ou le tuteur légal d'une personne de moins de dix-
+II. — L'aide à la continuité territoriale prévue au premier alinéa de l'article L. 1803-4 ne peut être versée au cours des
+trois années suivant l'année de délivrance de la dernière aide, sauf si l'aide est sollicitée ou a été précédemment accordée
+pour se rendre aux obsèques d'un parent au premier degré, au sens de l'article 743 du code civil, ou du conjoint marié ou lié
+par un pacte civil de solidarité. 
+
+III. — Par dérogation au I et au II du présent article, le père ou la mère ou le tuteur légal d'une personne de moins de dix-
 huit ans évacuée sanitaire peut prétendre à l'aide à la continuité territoriale sans condition de délai depuis la dernière
 aide si un premier accompagnant bénéficie d'une prise en charge du déplacement par la sécurité sociale. 
 
-IV.-Sans préjudice du second alinéa de l'article D. 1803-3, les aides prévues aux articles L. 1803-4 à L. 1803-6 ne peuvent
+IV. — Sans préjudice du second alinéa de l'article D. 1803-3, les aides prévues aux articles L. 1803-4 à L. 1803-6 ne peuvent
 être cumulées, pour le financement du même déplacement, avec aucune autre aide individuelle versée par une personne
 publique. 
 
-V.-Pour l'application du présent article, seule la date du voyage aller est prise en compte.
+V. — Pour l'application du présent article, seule la date du voyage aller est prise en compte.
 
 **Liens relatifs à cet article**
 
@@ -35,10 +42,11 @@ V.-Pour l'application du présent article, seule la date du voyage aller est pri
 
 	**Modifié par**:
 
-	  - Décret n°2015-166 du 13 février 2015 - art. 3
+	  - Décret n°2016-1791 du 19 décembre 2016 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. D1803-11 (V)
-	  - Code des transports - art. D1803-3 (V)
+	  - Code civil - art. 743
+	  - Code des transports - art. D1803-11
+	  - Code des transports - art. D1803-3
 	  - Code des transports - art. L1803-4
