--- a/02. PARTIE REGLEMENTAIRE/Article D1803-2 - 28997194.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-2 - 28997194.md
@@ -6,10 +6,14 @@ conditions d'éligibilité fixées en application des articles L. 1803-2 et L. 1
 partie du coût du déplacement aller et retour en transport aérien au départ de leur collectivité vers la France
 métropolitaine. 
 
-Le montant de l'aide versée aux personnes éligibles varie en fonction des ressources de celles-ci.
+Le montant de l'aide versée aux personnes éligibles varie en fonction des ressources de celles-ci. 
 
 La décision accordant une aide à la continuité territoriale vers la France métropolitaine précède la réservation du titre de
-transport.
+transport. 
+
+Par dérogation aux dispositions de l'alinéa précédent, lorsque la demande d'aide est justifiée par un déplacement pour se
+rendre aux obsèques d'un parent au premier degré, au sens de l'article 743 du code civil, ou du conjoint marié ou lié par un
+pacte civil de solidarité, la demande est déposée au plus tard trois mois après la date du voyage aller.
 
 **Liens relatifs à cet article**
 
@@ -19,12 +23,13 @@ transport.
 
 	**Modifié par**:
 
-	  - Décret n°2015-166 du 13 février 2015 - art. 1
+	  - Décret n°2016-1791 du 19 décembre 2016 - art. 2
+
+	**Cite**:
+
+	  - Code civil - art. 743
+	  - Code des transports - art. L1803-2
 
 	**Cité par**:
 
 	  - Code des transports - art. D1803-17 (T)
-
-	**Cite**:
-
-	  - Code des transports - art. L1803-2
