--- a/01. PARTIE LEGISLATIVE/Article L5272-3 - 23080810.md
+++ b/01. PARTIE LEGISLATIVE/Article L5272-3 - 23080810.md
@@ -26,12 +26,32 @@ l'activité de formation à la conduite des bateaux de plaisance à moteur en me
 1° D'être légalement établis dans un de ces Etats pour y exercer cette activité ;
 
 2° Lorsque ni l'activité ni la formation qui y conduit ne sont réglementées dans l'Etat, de l'avoir exercée pendant au moins
-deux ans dans cet Etat au cours des dix années qui précèdent la prestation en France. Cette condition n'est pas exigée si la
-formation conduisant à cette activité y est réglementée.
+un an ou à temps partiel pendant une durée totale équivalente dans cet Etat ou dans un autre Etat membre ou partie à l'accord
+sur l'Espace économique européen au cours des dix années qui précèdent la prestation en France. Cette condition n'est pas
+exigée si la formation conduisant à cette activité y est réglementée.
 
 Lorsqu'un ressortissant d'un Etat membre de l'Union européenne ou d'un Etat partie à l'accord sur l'Espace économique
 européen effectue pour la première fois une prestation en France, il en informe au préalable l'autorité administrative par
-une déclaration qui donne lieu à une vérification de ses qualifications professionnelles.
+une déclaration qui donne lieu à une vérification de ses qualifications professionnelles. Lorsque ces qualifications ne
+concernent qu'une partie de l'activité envisagée, la prestation est limitée à la partie pour laquelle le demandeur est
+qualifié.
+
+L'autorité administrative accorde un accès partiel au cas par cas à l'activité de formateur à la conduite des bateaux de
+plaisance à moteur en mer et en eaux intérieures lorsque toutes les conditions suivantes sont remplies : 
+
+1° Le professionnel est pleinement qualifié pour exercer dans l'Etat membre d'origine l'activité professionnelle pour
+laquelle un accès partiel est sollicité dans l'Etat membre d'accueil ; 
+
+2° Les différences entre l'activité professionnelle légalement exercée dans l'Etat membre d'origine et la profession
+réglementée dans l'Etat membre d'accueil sont si importantes que l'application de mesures de compensation reviendrait à
+imposer au demandeur de suivre le programme complet d'enseignement et de formation requis dans l'Etat membre d'accueil pour
+avoir pleinement accès à la profession réglementée dans l'Etat membre d'accueil ; 
+
+3° L'activité professionnelle est objectivement distincte de la ou des activités relevant de la profession réglementée, dans
+la mesure où elle peut être exercée de manière autonome dans l'Etat d'origine. 
+
+L'accès partiel peut être refusé pour des raisons impérieuses d'intérêt général, si ce refus est propre à garantir la
+réalisation de l'objectif poursuivi et si ce refus est proportionné à la protection de cet intérêt.
 
 **Liens relatifs à cet article**
 
@@ -45,4 +65,4 @@ une déclaration qui donne lieu à une vérification de ses qualifications profe
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+	  - Ordonnance n°2016-1809 du 22 décembre 2016 - art. 16
